[FIX] web: fix broken breadcrumb
Steps:
- Create a new project having letters like 'q,y,g' etc.
- Create one task and Edit it.
- Check the breadcrumb.

Issue:
- The text is slightly cut from the bottom.

Cause:
-We are applying the `text-truncate` class which has `overflow: hidden` CSS.

Fix:
- We will change the line height to 1.1 from 1 by adding a new class.

--- a/addons/web/static/src/search/control_panel/control_panel.scss
+++ b/addons/web/static/src/search/control_panel/control_panel.scss
@@ -4,6 +4,10 @@
 
     .o_control_panel_breadcrumbs {
         min-width: 200px;
+
+        .lht {
+            line-height: 1.1 !important;
+        }
     }
 
     @include media-breakpoint-down(md) {
